Modal render beginning to look like mockup. Need to figure out a way to render Tag Group and Tags correctly to account for white space.

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@
   padding-left: 0;
 }
 
-.fieldTypes-column1 {
-  margin-left: 40px;
+.modalColumn1-fieldTypes {
+  /* margin-left: 20px; */
 }
 
 .modal-header {
